Uso de propiedades y mejora de UI

--- a/LanzadorWPF/Lanzador.csproj
+++ b/LanzadorWPF/Lanzador.csproj
@@ -9,6 +9,7 @@
     <AssemblyName>LanzadorWPF</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <NoWin32Manifest>False</NoWin32Manifest>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
